# cluedit

./: .gitignore  CHANGELOG.md  README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: backup_service.rs  codex.rs  commands.rs  content_sanitizer.rs  conversation_analyzer.rs  conversation_service.rs  error.rs  file_watcher.rs  hf_publish.rs  lib.rs  main.rs  models.rs  search_indexer.rs  title_cache.rs
src/lib/: api.ts  highlight.ts  stores.ts  types.ts
src/lib/components/: CommandPalette.svelte  ConversationList.svelte  ConversationSearchView.svelte  ConversationView.svelte  ConversationViewer.svelte  JsonView.svelte  PublishDialog.svelte  SearchView.svelte  Sidebar.svelte  Skeleton.svelte  StatusBar.svelte  Titlebar.svelte  Toolbar.svelte
src/lib/stores/: statusStore.ts  themeStore.ts
src/routes/: +page.svelte
